# ec

./: CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: ci.yaml  linux.yaml  windows.yaml
core/: CMakeLists.txt
core/example/: CMakeLists.txt
core/example/src/: active_object.cpp  event_service.cpp  timer_service.cpp
core/include/ec/core/: active_object.h  event_service.h  timer_service.h
core/test/: CMakeLists.txt
core/test/src/: test_active_object.cpp  test_event_service.cpp  test_timer_service.cpp
warning/: CMakeLists.txt
